<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/ultra_violet">


        <ImageButton
            android:id="@+id/imageButton_info"
            android:contentDescription="Go to information fragment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/ultra_violet"
            android:layout_weight="1"
            android:src="@android:drawable/ic_dialog_info" />

        <TextView
            android:id="@+id/application_version"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/app_version" />

    </LinearLayout>

    <TextView
        android:id="@+id/nomapplication"
        android:text="@string/nomapplication"
        android:gravity="center"
        android:textColor="@color/thulian_pink"
        android:textStyle="bold"
        android:textSize="50dp"
        android:layout_margin="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_lancer"
        android:gravity="center"
        android:layout_width="match_parent"
        android:textSize="30dp"
        android:backgroundTint="@color/ultra_violet"
        android:layout_margin="30dp"
        android:layout_height="200dp"
        android:text="@string/button_lancer" />

    <TextView
        android:id="@+id/tips_demo"
        android:gravity="center"
        android:background="@color/thulian_pink"
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:layout_height="match_parent"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:text="@string/tips_demo" />

</LinearLayout>